erDiagram
    Orders {
        Long id PK
        String customerName
        Boolean priority
        String notes
        LocalDateTime orderCreated
        Integer totalEstimatedTime
    }

    Items {
        Long id PK
        String itemImage
        String name
        Long productTypeId FK
    }

    ProductTypes {
        Long id PK
        String name
    }

    OrderDetails {
        Long id PK
        Long orderId FK
        Long itemId FK
        Integer currentStepIndex
        Integer itemAmount
        String productType
    }

    StatusDefinitions {
        Long id PK
        String description
        String image
        String name
    }

    OrderProductTypeSteps {
        Long orderProductTypeId FK
        Long stepId FK
        Integer stepOrder
    }

    OrderProductTypeUpdated {
        Long orderProductTypeId FK
        LocalDateTime updated
        Long statusDefinitionId FK
    }

    OrderSteps {
        Long orderId FK
        Long stepId FK
        Integer stepOrder
    }

    ProductTypeSteps {
        Long productTypeId FK
        Long stepId FK
        Integer stepOrder
    }

    Orders ||--o{ OrderDetails : "contains"
    Items ||--o{ OrderDetails : "used in"
    ProductTypes ||--o{ Items : "categorizes"
    ProductTypes ||--o{ ProductTypeSteps : "has steps"
    StatusDefinitions ||--o{ OrderProductTypeUpdated : "tracks status"
    Orders ||--o{ OrderSteps : "has steps"
    ProductTypes ||--o{ OrderProductTypeSteps : "defines steps"
    StatusDefinitions ||--o{ ProductTypeSteps : "defines steps"
